fix overflow

--- a/src/components/Annotator/Annotator.module.css
+++ b/src/components/Annotator/Annotator.module.css
@@ -1,16 +1,15 @@
 .annotatorContainer {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow: hidden;
 }
 
 .imgContainer {
   position: absolute;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
 }
